Develop the configuration handling - not finished